remove main script, add bin

--- a/package.json
+++ b/package.json
@@ -2,9 +2,14 @@
   "name": "emo",
   "version": "0.0.1",
   "description": "Japanese emoticon generator",
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "engines": {
+    "node": ">= 0.10.0"
+  },
+  "bin": {
+    "emo": "./bin/emo.js"
   },
   "repository": {
     "type": "git",
