add -t option to list tags

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "dependencies": {
     "commander": "^2.3.0",
     "emoticon-data": "^0.1.1",
-    "lodash": "^2.4.1"
+    "lodash": "^2.4.1",
+    "text-table": "^0.2.0"
   }
 }
