--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "homepage": "https://github.com/w33ble/emo",
   "dependencies": {
     "commander": "^2.3.0",
+    "copy-paste": "^0.3.0",
     "emoticon-data": "^0.1.1",
     "lodash": "^2.4.1",
     "text-table": "^0.2.0"
