--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "emo",
   "version": "0.1.0",
-  "description": "Japanese emoticon generator",
+  "description": "Japanese emoticon generator ヾ(＠゜▽゜＠）ノ",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
