--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
-    "node": ">= 0.10.0"
+    "node": "^6.0.0"
   },
   "bin": {
     "emo": "./bin/emo.js"
