replace commander with yarg-parser
also add --help and --version

--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
   "homepage": "https://github.com/w33ble/emo",
   "dependencies": {
     "clipboardy": "^1.1.2",
-    "commander": "^2.9.0",
     "emoticon-data": "^0.2.0",
-    "text-table": "^0.2.0"
+    "text-table": "^0.2.0",
+    "yargs-parser": "^7.0.0"
   },
   "devDependencies": {
     "eslint": "^3.19.0",
